<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/homeScreenImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/HomeScreenCD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homepage" />

    <TextView
        android:id="@+id/HomeScreenStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/Sysname"
        android:textColor="#121111"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeScreenImg" />

    <TextView
        android:id="@+id/HomeScreenStr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:text="@string/Sysname2"
        android:textColor="#121111"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeScreenStr" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:text="@string/cap"
        android:textColor="#E29F9090"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeScreenStr2" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="95dp"
        android:drawableTop="@drawable/ic_login"
        android:padding="2dp"
        android:text="Login"
        android:textColor="#131313"
        android:textColorHint="#F3E8E8"
        android:textSize="12sp"
        app:backgroundTint="#FFFFFFFF"
        app:iconPadding="2dp"
        android:background="@android:color/transparent"
        app:layout_constraintBaseline_toBaselineOf="@+id/RegisterBtn"
        app:layout_constraintEnd_toStartOf="@+id/RegisterBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:drawableTop="@drawable/ic_reg"
        android:padding="2dp"
        android:text="Register"
        android:textColor="#131313"
        android:textColorHint="#F3E8E8"
        android:textSize="12sp"
        app:backgroundTint="#FFFFFFFF"
        app:iconPadding="2dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LoginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>