<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logtitle"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/logtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Sysname"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signinstr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/signin"
        android:textColor="#201E1E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LoginContaner"
        android:layout_width="413dp"
        android:layout_height="375dp"
        android:layout_marginTop="5dp"
        android:background="#2CEFEBEB"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinstr">

        <ImageButton
            android:id="@+id/showLoginPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FBF8F8"
            android:onClick="showPass"
            android:tag="0"
            app:layout_constraintBottom_toBottomOf="@+id/userPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userPass"
            app:layout_constraintTop_toTopOf="@+id/userPass"
            app:srcCompat="@drawable/show" />

        <Spinner
            android:id="@+id/Role"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:entries="@array/roleNames"
            android:saveEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userMail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:autoText="true"
            android:contentDescription="mail"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="#0E0D0D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Role" />

        <EditText
            android:id="@+id/userPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#0C0C0C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userMail" />

        <CheckBox
            android:id="@+id/rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:text="Remember Me"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPass" />

        <Button
            android:id="@+id/loginUserBtn"
            android:layout_width="86dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:text="@string/LoginBtnText"
            android:textSize="12sp"
            app:backgroundTint="#AB191818"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rm" />

        <TextView
            android:id="@+id/forgotLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:onClick="forgotPassAct"
            android:text="@string/forgotpass"
            android:textColor="#54A2E6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUserBtn" />

        <TextView
            android:id="@+id/newUserLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:onClick="regAct"
            android:text="@string/newUser"
            android:textColor="#54A2E6"
            app:layout_constraintStart_toEndOf="@+id/forgotLink"
            app:layout_constraintTop_toBottomOf="@+id/loginUserBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>